[package]
name = "uhppote-sys"
authors = ["Wouter de Bie <wouter@evenflow.nl>"]
repository = "https://github.com/wouterdebie/uhppote-sys"
description = "FFI bindings to uhppoted-dll"
readme = "README.md"
license = "MIT"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.60.1"
